--- a/carsales/mainapp/templates/cars/car_list.html
+++ b/carsales/mainapp/templates/cars/car_list.html
@@ -55,8 +55,10 @@
         </div>
         {% endfor %}
     </div>
-    
-    {% include "pagination.html" %}
+    <!-- Удаление пагинации, в целях упрощения кода -->
+    <!-- <div class="pageNav">
+        {% include "pagination.html" %}
+    </div> -->
 </div>
 {% endblock %}
 
