--- a/carsales/mainapp/static/css/style.css
+++ b/carsales/mainapp/static/css/style.css
@@ -511,4 +511,13 @@ footer {
     font-size: 1.2rem;
 }
 
+.pageNav {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+
+}
+
 /* Для адаптивности можно добавить media-запросы */
