--- a/carsales/mainapp/templates/base.html
+++ b/carsales/mainapp/templates/base.html
@@ -20,7 +20,7 @@
                     <li><a href="#about" class="scroll-btn">О нас</a></li>
                     <li><a href="#contact" class="scroll-btn">Контакты</a></li>
                 </ul>
-                <a href="#contact" class="btn-contact">Связаться</a>
+                <a href="/#contact" class="btn-contact">Связаться</a>
             </nav>
         </div>
     </header>
