fix styles for pagination

--- a/carsales/mainapp/templates/cars/car_detail.html
+++ b/carsales/mainapp/templates/cars/car_detail.html
@@ -37,7 +37,7 @@
         
         <div class="col-md-4">
             <h1>{{ car.car_model }} {{ car.year }}</h1>
-            <h3 class="text-primary">${{ car.price }}</h3>
+            <h3 class="text-primary">{{ car.price }}₽</h3>
             
             <table class="table table-striped mt-4">
                 <tr>
