--- a/carsales/mainapp/static/css/style.css
+++ b/carsales/mainapp/static/css/style.css
@@ -511,13 +511,40 @@ footer {
     font-size: 1.2rem;
 }
 
-.pageNav {
+.pageNav nav ul{
 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    list-style-type: none;
 
+}
+
+.pageNav nav ul li {
+    margin-right: 8px;
+
+}
+
+.pageNav nav ul li a {
+
+    color: #FFF;
+    text-decoration: none;
+    font-size: 1.05rem;
+    font-weight: 500;
+    opacity: 0.86;
+    padding: 0.375rem 0.75rem;
+    transition: all 0.5s ease;
+    background-color: #8B0000;
+    border-radius: 4px;
+
+
+}
+
+.pageNav nav ul li a:hover {
+    border-radius: 10px;
+    background-color: #6A0000;
+    opacity: 1;
 }
 
 /* Для адаптивности можно добавить media-запросы */
